--- a/package.json
+++ b/package.json
@@ -33,5 +33,8 @@
     "web3": "^0.20.0",
     "webpack": "^2.2.1",
     "webpack-dev-server": "^2.3.0"
+  },
+  "dependencies": {
+    "sweetalert2": "^11.5.1"
   }
 }
